<?xml version="1.0"?>
<package>
  <name>robot_filters</name>
  <version>0.0.1</version>
  <description>Package containing filters useful in robotics applications</description>

  <author email="griswald.brooks@gmail.com">Griswald Brooks</author>
  <maintainer email="griswald.brooks@gmail.com">Griswald Brooks</maintainer>
  <license>MIT</license>
  <url>https://github.com/griswaldbrooks/robot_filters</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>